# talon

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Taskfile.yml  config.toml  docker-compose.yml
.claude/plans/: conversation-api-simplification-plan.md  phase-4-multi-tenancy-plan.md  phase-5-authz-audit-plan.md  phase-6-inference-hooks-plan.md  rate-limit-circuit-breaker-plan.md  talon-admin-plan.md  talon-discord-plan.md  talon-gateway-plan.md  talon-slack-plan.md  talon-telegram-plan.md  talon-web-channel-plan.md  tool-integration-acton-ai-builtins.md
crates/talon-admin/: Cargo.toml  config.toml
crates/talon-admin/src/: api_client.rs  lib.rs  main.rs  routes.rs
crates/talon-admin/src/handlers/: agents.rs  dashboard.rs  mod.rs  sessions.rs  tenants.rs
crates/talon-admin/templates/: base.html  dashboard.html
crates/talon-admin/templates/agents/: create.html  list.html
crates/talon-admin/templates/partials/: agent_row.html  nav.html  tenant_row.html
crates/talon-admin/templates/sessions/: list.html
crates/talon-admin/templates/tenants/: create.html  detail.html  list.html
crates/talon-channel-sdk/: Cargo.toml  build.rs
crates/talon-channel-sdk/src/: client.rs  error.rs  handler.rs  lib.rs  proto.rs
crates/talon-channels/: Cargo.toml
crates/talon-channels/src/: channel.rs  error.rs  lib.rs
crates/talon-channels/src/discord/: mod.rs
crates/talon-channels/src/ipc/: client.rs  config.rs  connection.rs  error.rs  mod.rs
crates/talon-channels/src/telegram/: channel.rs  config.rs  handlers.rs  mapping.rs  mod.rs  streaming.rs
crates/talon-channels/src/terminal/: mod.rs  ui.rs
crates/talon-cli/: Cargo.toml
crates/talon-cli/src/: lib.rs  main.rs
crates/talon-cli/src/commands/: channel.rs  chat.rs  config.rs  mod.rs  skills.rs
crates/talon-core/: Cargo.toml
crates/talon-core/src/: config.rs  error.rs  lib.rs  runtime.rs  types.rs
crates/talon-core/src/conversation/: actor.rs  messages.rs  mod.rs
crates/talon-core/src/ipc/: auth.rs  handlers.rs  messages.rs  mod.rs  server.rs
crates/talon-core/src/router/: actor.rs  mod.rs
crates/talon-core/src/skills/: cache.rs  capabilities.rs  error.rs  extended_claims.rs  integrity.rs  mod.rs  omnibor_id.rs  registry.rs  registry_client.rs  secure_executor.rs  tool_bridge.rs  verification.rs  verified.rs
crates/talon-core/src/trust/: mod.rs  tiers.rs
crates/talon-discord/: Cargo.toml
crates/talon-discord/src/: bot.rs  lib.rs  main.rs
crates/talon-gateway/: Cargo.toml  build.rs
crates/talon-gateway/src/: agent_handlers.rs  audit.rs  circuit_breaker.rs  error.rs  grpc_service.rs  handlers.rs  inference.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  session_store.rs  tenant_handlers.rs
crates/talon-gateway/src/db/: agent_repo.rs  audit_repo.rs  mod.rs  schema.rs  session_repo.rs  tenant_repo.rs  usage_repo.rs
crates/talon-inference/: Cargo.toml
crates/talon-inference/src/: error.rs  hook.rs  lib.rs  pipeline.rs
crates/talon-inference/src/hooks/: input_sanitizer.rs  mod.rs  pii_detector.rs  usage_tracker.rs
crates/talon-registry/: Cargo.toml
crates/talon-registry/src/: error.rs  lib.rs
crates/talon-registry/src/handlers/: mod.rs  skill_handler.rs
crates/talon-registry/src/models/: attestation.rs  mod.rs  publisher.rs  skill.rs
crates/talon-registry/src/routes/: discover.rs  mod.rs  publishers.rs  skills.rs  trust_roots.rs
crates/talon-slack/: Cargo.toml
crates/talon-slack/src/: bot.rs  main.rs
crates/talon-telegram/: Cargo.toml
crates/talon-telegram/src/: bot.rs  main.rs
crates/talon-types/: Cargo.toml
crates/talon-types/src/: agent.rs  error.rs  ids.rs  lib.rs  messages.rs  session.rs  tenant.rs  trust.rs  usage.rs
crates/talon-web/: Cargo.toml
crates/talon-web/src/: handlers.rs  main.rs  routes.rs  ws.rs
deploy/: talon-telegram.service
docs/: audit-findings.md
docs/design/: 2026-02-03-talon-architecture.md
docs/plans/: 2026-02-03-workspace-scaffold.md  phase-4-ipc-connection.md
policies/: talon.cedar
proto/talon/: channel.proto  common.proto  gateway.proto
