[workspace]
resolver = "2"
members = [
    "crates/talon-core",
    "crates/talon-channels",
    "crates/talon-cli",
    "bin/talon-core",
    "bin/talon-telegram",
    "bin/talon-discord",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Govcraft/talon"
authors = ["Roland R. Rodriguez, Jr. <rrrodzilla@proton.me>"]

[workspace.dependencies]
# Core framework
acton-ai = { version = "0.24", features = ["agent-skills"] }
acton-reactive = { version = "7.1", features = ["ipc"] }
acton-service = { version = "0.15" }

# Identity & Security
agent-uri = { version = "0.4", features = ["serde"] }
agent-uri-attestation = "0.2"
agent-uri-dht = { version = "0.1", features = ["serde"] }
omnibor = "0.10"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
mti = { version = "1.1", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Channel dependencies
teloxide = "0.17"
serenity = "0.12"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"

# Security
keyring = "3"
secrecy = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
