[workspace]
members = [
    "crates/talon-types",
    "crates/talon-inference",
    "crates/talon-gateway",
    "crates/talon-channel-sdk",
    "crates/talon-telegram",
    "crates/talon-discord",
    "crates/talon-slack",
    "crates/talon-web",
    "crates/talon-admin",
]
default-members = ["crates/talon-gateway"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["roland@govcraft.ai"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/govcraft/talon"

[workspace.dependencies]
# Talon crates
talon-types = { path = "crates/talon-types" }
talon-inference = { path = "crates/talon-inference" }
talon-gateway = { path = "crates/talon-gateway" }
talon-channel-sdk = { path = "crates/talon-channel-sdk" }

# Frameworks
acton-service = { version = "0.16", features = ["http", "grpc", "websocket", "sse", "surrealdb", "cache", "events", "observability", "otel-metrics", "cedar-authz", "governor", "audit", "resilience"] }
acton-ai = "0.25"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Database
surrealdb = { version = "2.6", features = ["protocol-ws", "kv-mem"] }

# HTTP framework (re-exported by acton-service, explicit for middleware access)
axum = "0.8"

# Rate limiting
governor = "0.10"

# Security
blake3 = "1"
regex = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
