[package]
name = "talon-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Inference pipeline and hook system for Talon AI gateway"

[dependencies]
talon-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
