[package]
name = "talon-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Proprietary"
repository.workspace = true
authors.workspace = true
description = "TalonHub HTTP registry service for skill discovery and verification"

[dependencies]
talon-core = { path = "../talon-core" }
# NOTE: acton-service 0.15.0 has a bug with the auth feature requiring rand.
# Using reduced feature set until fix is available.
acton-service = { version = "0.15", features = [
    "http",
    "database",
    "cache",
    "observability",
    "otel-metrics",
    "openapi",
    "governor",
    "pagination-full",
] }
# NOTE: agent-uri crates require local development - uncomment when available:
# agent-uri.workspace = true
# agent-uri-attestation.workspace = true
omnibor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
