[package]
name = "talon-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Proprietary"
repository.workspace = true
authors.workspace = true
description = "TalonHub HTTP registry service for skill discovery and verification"

[dependencies]
talon-core = { path = "../talon-core" }
acton-service = { version = "0.15", features = [
    "http",
    "database",
    "cache",
    "observability",
    "otel-metrics",
    "openapi",
    "governor",
    "pagination-full",
    "jwt",
] }
agent-uri.workspace = true
agent-uri-attestation.workspace = true
omnibor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
