[package]
name = "talon-slack"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Slack channel adapter for the Talon AI gateway"

[[bin]]
name = "talon-slack"
path = "src/main.rs"

[dependencies]
talon-types = { workspace = true }
talon-channel-sdk = { workspace = true }

slack-morphism = { version = "2.17", features = ["hyper"] }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
