[package]
name = "talon-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared domain types for the Talon AI gateway"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
